Fixed color, spacing on lists

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: #fdf6e3;
 }
@@ -7,7 +6,7 @@ header, footer {
   font-size: 1.5rem;
 }
 
-nav ul {
+header nav ul {
   font-family: sans-serif;
 }
 
@@ -32,18 +31,18 @@ nav ul {
 }
 
 html body header h1 nav ul li {
-  background-color: #719e07;
+  background-color: #719e47;
 }
 
-a [rel="external"] {
+[rel="external"] {
   background-color: #2694d8;
 }
 
-ol li: first-child {
+ol li:first-child {
   color: #719e47;
 }
 
-ol li: last-child {
+ol li:last-child {
   color: #2aa198;
 }
 
